samples/_failures_safe/1761298047_ab8934_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6efe529f.c: In function ‘main’:
./samples/SAFE/__tmp_6efe529f.c:171:12: error: missing terminating " character
  171 |     printf("\nTokens found:\n
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6efe529f.c:171:5: error: expected expression at end of input
  171 |     printf("\nTokens found:\n
      |     ^~~~~~
./samples/SAFE/__tmp_6efe529f.c:171:5: error: expected declaration or statement at end of input
